# youre_a_square

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  Makefile  Pipfile  compose.yml  pyproject.toml  pytest.ini  sonar-project.properties
.github/workflows/: cicd.yml
docs/: BACKLOG.md  CONTRIBUTING.md  NOTES.md  README.md  REFACTOR.md  TECHDEBT.md
modules/: calculate_square.py
modules/api/: dummy_app.py
pacts/: youre_a_square_client-youre_a_square_app.json
tests/api/: test_dummy_consumer.py
tests/unit/: test_0_installer_runner.py
